--- a/client/ban/index.html
+++ b/client/ban/index.html
@@ -47,6 +47,7 @@
 	</head>
 	<body class="frontend.home">
 		<div class="od-container-main">
+
 			<header>
 				<div id="od_header">
     <div class="od-w-100">
@@ -64,7 +65,9 @@
                     <nav class="od-menu-lists-container">
                         <ul class="od-menu-lists "> 
                             <li class="od-menu-list-item"><a href="index.html">হোম</a></li>
-                            <li class="od-menu-list-item"><a href="index.html">মেনু</a></li>
+                            <li class="od-menu-list-item"><a href="index.html">মেনু 
+                                
+                            </a></li>
                             <li class="od-menu-list-item"><a href="about-us.html">আমাদের সম্পর্কে</a></li>
                             <li class="od-menu-list-item"><a href="faq.html">জিজ্ঞাসা</a></li>
                             <li class="od-menu-list-item"><a href="guide.html">নির্দেশনা</a></li>
@@ -174,22 +177,22 @@
                                         </div>
                 </div>
                                 <div class="od-search-fields">
-                    <div class="od-search-option-label">স্থায়ী ঠিকানা</div>
+                    <div class="od-search-option-label">জেলা</div>
                     <div class="od-search-option-input">
                                                                     <div class="od-location-dropdown od-field-type__location od-biodata-search-control" data-field_id="10">
                             <a href="#" class="od-location-dropdown-trigger">
-                            ঠিকানা নির্বাচন করুন
+                            জেলা নির্বাচন করুন
                             </a>
                             <div class="odl-wrap od-location-panel-wrap">
                                 <div class="odl-head">
-                                    <h3>দেশ নির্বাচন করুন</h3>
+                                    <h3>জেলা নির্বাচন করুন</h3>
                                     <a href="#" class="od-close-panel"><i class="fa fa-times"></i></a>
                                 </div>
                                 <div class="od-form-group-input">
                                     <input class="location-search" data-target="country" type="search" placeholder="দেশ খুঁজুন">
                                 </div>
                                 <ul class="odl-nav">
-                                                                                                                                                                    <li><a href="#" data-handle="bangladesh" data-name="বাংলাদেশ" data-country_name="bangladesh" data-total_index="3" data-current_index="" data-has_index="yes">বাংলাদেশ</a></li>
+                                                                                                                                                                    <li><a href="#" data-handle="bangladesh" data-name="বাংলাদেশ" data-country_name="bangladesh" data-total_index="3" data-current_index="" data-has_index="yes">জেলা</a></li>
                                                                                                             </ul>
                             </div>
                         </div>
